# FORESEE

./: .gitignore  LICENSE.md  Plot.ipynb  README.md  Tutorial-ALP-W.ipynb  Tutorial-AM.ipynb  Tutorial-CR.ipynb  Tutorial-DarkHiggs.ipynb  Tutorial-DarkPhoton.ipynb  Tutorial-EDM.ipynb  Tutorial-MCP.ipynb  Tutorial-MDM.ipynb  Tutorial-UpPhilic.ipynb  future-DarkHiggs.ipynb  nb-UpPhilic.ipynb  pyproject.toml  run_test.sh
Models/2HDM_H/: 2HDM_H.ipynb  2HDM_H_check.ipynb
Models/ALP-LSW/: ALP-LSW.ipynb
Models/ALP-LSWUncertainty/: ALP-LSW.ipynb
Models/ALP-W/: ALP-W.ipynb
Models/ALP-WUncertainty/: ALP-W.ipynb  Systematics.ipynb
Models/ALP-g/: ALP-g.ipynb
Models/ALP-photon/: ALP-photon.ipynb
Models/ALP-photonUncertainty/: ALP-photon.ipynb  Systematics.ipynb
Models/DarkHiggs/: DarkHiggs.ipynb
Models/DarkPhoton/: DarkPhoton.ipynb
Models/DarkPhoton+DarkHiggs/: DarkPhoton+DarkHiggs.ipynb
Models/DarkPhotonUncertainty/: DarkPhoton.ipynb
Models/HNL/: .gitignore  HNL.ipynb  HNLCalc.py  HNL_001.ipynb  HNL_010.ipynb  HNL_100.ipynb  HNL_Decay.py  HeavyNeutralLepton.py  alecs_code.ipynb  alph_str.csv  atextfile.txt  ctau.txt  demofile2.txt  junk.ipynb  junk.py  junk1.ipynb  test_code_junk.ipynb
Models/HNL-001/: HNL_001.ipynb  HeavyNeutralLepton.py
Models/HNL-010/: HNL_010.ipynb
Models/HNL-100/: HNL_100.ipynb  HeavyNeutralLepton.py
Models/MCP/: MCP.ipynb
Models/U(1)B/: U(1)B.ipynb
Models/U(1)B-L/: U(1)B-L.ipynb
Models/U(1)BUncertainty/: Systematics.ipynb  U(1)B.ipynb
src/: foresee.py  foresee_felix.py
tests/: test_Foresee.py  test_Utility.py
(+9836 files in other folders)
